Added website icon.
Signed-off-by: Aditya Pillai <github@pillai.io>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -369,13 +369,13 @@ input, select, textarea {
 		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		border-bottom: dotted 1px rgba(255, 255, 255, 0.25);
-		color: #db3a04;
+		color: #F62336;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #db3a04 !important;
+			color: #F62336 !important;
 			text-decoration: none;
 		}
 
@@ -990,7 +990,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #FFAE03;
+			background-color: #FF6611;
 		}
 
 		input[type="submit"]:active,
@@ -998,7 +998,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: #FFAE03;
+			background-color: #FF6611;
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
