--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,8 @@
-body {
-  padding: 20px;
+.siorigin-btn {
+	color: #fe4707;
+	background: black;
+	padding: 5px;
+	border-radius: 5px;
+	font-weight: bold;
+	border: 1px dashed #6c7fc0;
 }
